# mediaPlayerLauncher

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dev.pfx  whiteskycn.p12
app/src/main/cpp/: PolygonBuffer.cpp  PolygonBuffer.h  atc_native_lib.cpp  mask_native_lib.cpp  polygon_native_lib.cpp
app/src/main/res/anim/: anim_setup.xml  guide_welcome_fade_in.xml  guide_welcome_fade_in_scale.xml  guide_welcome_fade_out.xml
app/src/main/res/drawable/: border_down_shape.xml  border_shape.xml  button_selector_admin_des.xml  button_selector_ota.xml  custom_progress_primary.xml  item_divider.xml  itme_divider.xml  list_item_shape.xml  progress_bg.xml  selecter_draglistview_item.xml  selector_button.xml  selector_gridview.xml  selector_media_add_btn.xml  selector_media_copy_multi_to_left_btn.xml  selector_media_copy_to_left_btn.xml  selector_media_copy_to_right_btn.xml  selector_media_delete_btn.xml  selector_media_download_btn.xml  selector_media_download_pause_btn.xml  selector_media_duration_add.xml  selector_media_duration_minus.xml  selector_media_gray_view_btn.xml  selector_media_mask_paint_cancel_btn.xml  selector_media_mask_paint_done_btn.xml  selector_media_mask_paint_next_btn.xml  selector_media_mask_paint_undo_btn.xml  selector_media_net_view_btn.xml  selector_media_next_btn.xml  selector_media_order_duration_btn.xml  selector_media_order_name_btn.xml  selector_media_order_source_btn.xml  selector_media_pause_btn.xml  selector_media_play_btn.xml  selector_media_remove_btn.xml  (+22 more)
(+377 files in other folders)
